--- a/Colab&GitHub/LinearRegression.ipynb
+++ b/Colab&GitHub/LinearRegression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOi6MSecAYW9GHwldjY9YnL",
+      "authorship_tag": "ABX9TyMFoTa44c6odAJjMpgH6hdc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5070,6 +5070,24 @@
           "execution_count": 57
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "fghjkl;"
+      ],
+      "metadata": {
+        "id": "OjhzMENZUGwk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VkgpidYJUGUi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
